Add philosophy text (reworked)

--- a/src/pages/nutrition.astro
+++ b/src/pages/nutrition.astro
@@ -71,7 +71,9 @@ const fuel = [
     </div>
     <div id="philosophy" class="philosophy-container">
       <h2 class="animate-title">Philosophy</h2>
-      <p>Here's where my philosophy goes...</p>
+      <p>My nutrition coaching focuses on helping you develop a sustainable approach to fueling that empowers you in your athletic performance and encourages long-term health.</p> 
+      <p>I strive to offer a scientific and strategic approach to fueling that is tailored specifically to YOU - balancing your goals, protecting long-term health, and understanding your lifestyle and preferences. Together, we’ll work to understand your relationship with food, untangle unhealthy influences, and develop sustainable and practical strategies to help you utilize nutrition to optimize your health and performance.</p>
+      <p>I promise to facilitate a safe, encouraging environment where you can share information without fear of judgment or shame regarding your health and weight history, body image and food-related struggles, along with dietary preferences and questions. </p>
     </div>
     <Counseling id="counseling"/>
     <div id="creds" class="creds-container">
