Edit text (punctuation)

--- a/src/components/Counseling.astro
+++ b/src/components/Counseling.astro
@@ -2,20 +2,20 @@
 const services = [
   {
     name: 'Intake Session',
-    description: 'I will provide individualized counseling tailored specifically to you by taking a deep dive into your current dietary habits, food preferences, activity level, and upcoming goals',
+    description: 'I will provide individualized counseling tailored specifically to you by taking a deep dive into your current dietary habits, food preferences, activity level, and upcoming goals.',
     time: '60 min',
     cost: 175,
     incl: 'handouts, fueling guides, and email support between sessions'
   },
   {
     name: 'Follow-up Session',
-    description: 'Fine tune our approach, troubleshoot any issues that have come up since the initial session, assess progress and adjust as needed',
+    description: 'Fine tune our approach, troubleshoot any issues that have come up since the initial session, assess progress and adjust as needed.',
     time: '45 min',
     cost: 125,
   },
   {
     name: 'Athlete Package',
-    description: 'Nutrition is an important part of the performance puzzle! I will help you cater your fueling toward your specific goals over the course of the intake session and three follow-up sessions',
+    description: 'Nutrition is an important part of the performance puzzle! I will help you cater your fueling toward your specific goals over the course of the intake session and three follow-up sessions.',
     cost: 450,
     incl: 'handouts, fueling guides, and email support between sessions'
   },
