Minor styling adjustments

--- a/src/pages/nutrition.astro
+++ b/src/pages/nutrition.astro
@@ -97,11 +97,13 @@ const fuel = [
   .nutrition-container {
     display: flex;
     flex-direction: column;
-    color: rgb(64,64,64);
+    color: rgb(64, 64, 64);
     background-color: rgb(245, 245, 245);
     width: 100vw;
     max-width: 575px;
     padding: 0 1.5rem;
+    box-shadow: 0 0 3px rgb(64, 64, 64);
+    border-radius: 3px;
   }
   .dietician-title {
     font-size: 2.5rem;
@@ -190,8 +192,6 @@ const fuel = [
     .nutrition-container {
       grid-column: 1/2;
       margin-left: 2rem;
-      border-radius: 3px;
-      box-shadow: 0 0 3px rgb(64,64,64)
     }
   }
 </style>
