--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,8 +1,8 @@
 ---
-const { title, description, url, date } = Astro.props;
+const { title, description, url, date, type } = Astro.props;
 ---
 
-<li class="bloglist-item">
+<li class="bloglist-item" id={type}>
   <a href={url}>
     <h4>{title}</h4>
     <p>{description}</p>
