Adjust color on list type

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -29,16 +29,16 @@ const { title, description, url, date, type } = Astro.props;
     border-right: 15px solid rgb(254, 7, 62);
   }
   #blog > div {
-    border-color: #F4A261;
+    border-color: #ff5400;
   }
   #media > div {
-    border-color: #40798C;
+    border-color: #0ead69;
   }
   #recipe > div {
-    border-color: #81B29A;
+    border-color: #fcca46;
   }
   #podcast > div {
-    border-color: #40798C;
+    border-color: #3da5d9;
   }
   .type {
     transform: rotate(-90deg);
