--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -58,6 +58,9 @@ const pageTitle = "Content";
   .visible {
     transform: rotate(180deg);
   }
+  ul {
+    padding: 0 8px;
+  }
 </style>
 <script>
   const jump = document.querySelector('img.jump-arrow');
