List spacing; item spacing

--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -59,7 +59,8 @@ const pageTitle = "Content";
     transform: rotate(180deg);
   }
   ul {
-    padding: 0 8px;
+    margin: 0 8px;
+    padding: 0;
   }
 </style>
 <script>
