--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -18,7 +18,7 @@ const { title, description, url, date, type, img } = Astro.props;
     list-style: none;
     margin: 0 5px 10px 5px;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: auto auto;
     place-items: center;
     border: 2px solid transparent;
     border-radius: 5px;
@@ -64,7 +64,10 @@ const { title, description, url, date, type, img } = Astro.props;
   a {
     text-decoration: none;
     color: rgb(64, 64, 64);
-    margin-left: 5px;
+    margin: 0 16px;
+  }
+  a > h4 {
+    margin: 16px 0;
   }
   /* img {
     max-height: 167px;
