--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -34,10 +34,18 @@ const pageTitle = "Content";
 </BaseLayout>
 <style>
   .content-wrapper {
-
+    margin-top: 50vh;
   }
   .content-container {
     background-color: rgb(245, 245, 245);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .content-title {
+    width: fit-content;
+    margin: 0;
   }
   .tags-container {
     max-height: 40px;
