Spacing/margins on mobile

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -16,7 +16,7 @@ const { title, description, url, date, type, img } = Astro.props;
 <style>
   li {
     list-style: none;
-    margin: 0 5px 10px 5px;
+    margin-bottom:10px;
     display: grid;
     grid-template-columns: auto auto;
     place-items: center;
