--- a/src/components/TagDisplay.astro
+++ b/src/components/TagDisplay.astro
@@ -7,22 +7,32 @@ const array = Astro.props.array;
     ))}
 </div>
 <style>
-a {
-  color: #00539f;
-}
 .tag-index-container {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 10vw;
+  margin: 0;
   justify-content: center;
   visibility: hidden;
 }
 .tag-item {
   margin: 0.25em;
   border: dotted 1px #a1a1a1;
-  border-radius: 0.5em;
-  padding: 0.5em 1em;
-  font-size: 1.15em;
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  font-size: 1em;
   background-color: #f8fcfd;
+  transition: all .3s ease-in;
 }
+.tag-item:hover {
+  border: 1px solid rgb(64, 64, 64);
+}
+a {
+  color: #00539f;
+  transition: transform .3s ease-in;
+}
+a:active {
+  transform: scale(0.95);
+  color: rgb(64, 64, 64)
+}
+
 </style>
