Fix alignment w/ grid (size of columns)

--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -44,6 +44,9 @@ const pageTitle = "Content";
     justify-content: center;
     align-items: center;
     padding: 0 1.5rem;
+    box-shadow: 0 0 3px rgb(64, 64, 64);
+    border-radius: 3px;
+    max-width: 575px;
   }
   .content-title {
     width: fit-content;
