--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -11,15 +11,13 @@ const { title, description, url, date, type, img } = Astro.props;
     <h4>{title}</h4>
     <p>{description}</p>
   </a>
-  <!-- { img ? <img src={img.url} alt={img.alt} /> : null } -->
 </li>
 <style>
   li {
     list-style: none;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     display: grid;
-    grid-template-columns: auto auto;
-    place-items: center;
+    grid-template-columns: 40px 1fr;
     border: 2px solid transparent;
     border-radius: 5px;
   }
@@ -69,7 +67,7 @@ const { title, description, url, date, type, img } = Astro.props;
   a > h4 {
     margin: 16px 0;
   }
-  /* img {
-    max-height: 167px;
-  } */
+  a:hover h4 {
+    text-decoration: underline;
+  }
 </style>
