--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -3,18 +3,30 @@ import BaseLayout from './BaseLayout.astro';
 const { frontmatter } = Astro.props;
 ---
 <BaseLayout pageTitle={frontmatter.title}>
-  <p>{frontmatter.pubDate.slice(0,10)}</p>
-  <p><em>{frontmatter.description}</em></p>
-  <p>Written by: {frontmatter.author}</p>
-  <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-  <div class="tag-index-container">
-    {frontmatter.tags.map((tag) => (
-      <p class="tag-item"><a href={`/tags/${tag}`}>{tag}</a></p>
-    ))}
+  <div class="blog-wrapper">
+    <h1 class="blog-title">{frontmatter.title}</h1>
+    <p>{frontmatter.pubDate.slice(5,10)}-{frontmatter.pubDate.slice(0,4)}</p>
+    <p><em>{frontmatter.description}</em></p>
+    <p>Written by: {frontmatter.author}</p>
+    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <div class="tag-index-container">
+      {frontmatter.tags.map((tag) => (
+        <p class="tag-item"><a href={`/tags/${tag}`}>{tag}</a></p>
+      ))}
+    </div>
+    <slot />
   </div>
-  <slot />
 </BaseLayout>
 <style>
+  .blog-wrapper {
+    margin-top: 50vh;
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1.5rem;
+  }
   a {
     color: #00539f;
   }
