--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -7,8 +7,9 @@ const { frontmatter } = Astro.props;
     <h1 class="blog-title">{frontmatter.title}</h1>
     <p>{frontmatter.pubDate.slice(5,10)}-{frontmatter.pubDate.slice(0,4)}</p>
     <p><em>{frontmatter.description}</em></p>
-    <p>Written by: {frontmatter.author}</p>
+    { frontmatter.author ? <p>Written by: {frontmatter.author}</p> : null }
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    { frontmatter.image.cred ? <figcaption>Credit: {frontmatter.image.cred}</figcaption> : null }
     <div class="tag-index-container">
       {frontmatter.tags.map((tag) => (
         <p class="tag-item"><a href={`/tags/${tag}`}>{tag}</a></p>
