--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -5,17 +5,18 @@ const { frontmatter } = Astro.props;
 <BaseLayout pageTitle={frontmatter.title}>
   <div class="blog-wrapper">
     <h1 class="blog-title">{frontmatter.title}</h1>
-    <p>{frontmatter.pubDate.slice(5,10)}-{frontmatter.pubDate.slice(0,4)}</p>
-    <p><em>{frontmatter.description}</em></p>
-    { frontmatter.author ? <p>Written by: {frontmatter.author}</p> : null }
+    <p class="blog-intro">{frontmatter.pubDate.slice(5,10)}-{frontmatter.pubDate.slice(0,4)}</p>
+    <p class="blog-intro"><em>{frontmatter.description}</em></p>
+    { frontmatter.author ? <p class="blog-intro">Written by: {frontmatter.author}</p> : null }
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
     { frontmatter.image.cred ? <figcaption>Credit: {frontmatter.image.cred}</figcaption> : null }
+    <slot />
     <div class="tag-index-container">
+      <!-- <div>tagged with:</div> -->
       {frontmatter.tags.map((tag) => (
-        <p class="tag-item"><a href={`/tags/${tag}`}>{tag}</a></p>
+        <a class="tag-item" href={`/tags/${tag}`}>{tag}</a>
       ))}
     </div>
-    <slot />
   </div>
 </BaseLayout>
 <style>
@@ -28,20 +29,18 @@ const { frontmatter } = Astro.props;
     align-items: center;
     padding: 0 1.5rem;
   }
-  a {
-    color: #00539f;
+  .blog-intro {
+    text-align: center;
   }
   .tag-index-container {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
+    justify-content: center;
+    align-items: center;
   }
-  .tag-item {
-    margin: 0.25em;
-    border: dotted 1px #a1a1a1;
-    border-radius: 0.5em;
-    padding: 0.5em 1em;
-    font-size: 1.15em;
-    background-color: #f8fcfd;
-  }
+  /* .tag-index-container > div:first-child {
+    color: #00539f;
+    font-family: "Unbounded";
+  } */
 </style>
