--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -1,16 +1,22 @@
 ---
 import BaseLayout from './BaseLayout.astro';
+const image = {
+  url: "../src/images/gallery/gate.jpg",
+  position: "25%",
+}
 const { frontmatter } = Astro.props;
 ---
-<BaseLayout pageTitle={frontmatter.title}>
+<BaseLayout pageTitle={frontmatter.title} img={image}>
   <div class="blog-wrapper">
     <h1 class="blog-title">{frontmatter.title}</h1>
-    <p class="blog-intro">{frontmatter.pubDate.slice(5,10)}-{frontmatter.pubDate.slice(0,4)}</p>
-    <p class="blog-intro"><em>{frontmatter.description}</em></p>
-    { frontmatter.author ? <p class="blog-intro"> {frontmatter.author}</p> : null }
+    <div class="intro-block">
+      <p class="blog-intro">{frontmatter.pubDate.slice(5,10)}-{frontmatter.pubDate.slice(0,4)}</p>
+      <p class="blog-intro"><em>{frontmatter.description}</em></p>
+      { frontmatter.author ? <p class="blog-intro"> {frontmatter.author}</p> : null }
+    </div>
     <img class="blog-main-image" src={frontmatter.image.url} alt={frontmatter.image.alt} />
     { frontmatter.image.caption ? <figcaption>{frontmatter.image.caption}</figcaption> : null }
-    { frontmatter.image.cred ? <figcaption>Credit: {frontmatter.image.cred}</figcaption> : null }
+    { frontmatter.image.cred ? <figcaption class="cap-credit">Credit: {frontmatter.image.cred}</figcaption> : null }
     <div class="blog-slot">
       <slot />
     </div>
@@ -24,7 +30,8 @@ const { frontmatter } = Astro.props;
 <style>
   .blog-wrapper {
     margin-top: 50vh;
-    background-color: whitesmoke;
+    background-color: rgb(245, 245, 245);
+    color: rgb(64, 64, 64);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,6 +43,18 @@ const { frontmatter } = Astro.props;
   }
   .blog-intro {
     text-align: center;
+  }
+  .intro-block {
+    margin: 0 0 12px 0;
+  }
+  .intro-block p {
+    margin: 8px 0;
+  }
+  figcaption {
+    font-size: small;
+  }
+  .cap-credit {
+    font-style: italic;
   }
   .tag-index-container {
     display: flex;
